# trion-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
src/Components/: Camera.cpp  Camera.h  Component.h  FpsCounter.cpp  FpsCounter.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
src/Core/: Application.cpp  Application.h  Time.cpp  Time.h
src/Math/: Mat4.h  Vec3.h
src/Object/: GameObject.cpp  GameObject.h
src/Platform/: Window.cpp  Window.h
src/Rendering/: RenderContext.cpp  RenderContext.h
src/Rendering/Mesh/: Mesh.cpp  Mesh.h
src/Rendering/Shader/: Shader.cpp  Shader.h
src/Scene/: BootScene.cpp  BootScene.h  ISceneFactory.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
